--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ node_modules/
 jspm_packages/
 */node_modules/
 **/node_modules/
+*/*/node_modules/
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
